<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_action_delete"
        android:orderInCategory="100"
        android:title="@string/main_action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_action_share"
        android:orderInCategory="200"
        android:title="@string/main_action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_action_edit"
        android:orderInCategory="300"
        android:title="@string/main_action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_action_setpictureas"
        android:orderInCategory="400"
        android:title="@string/main_action_setpictureas"
        app:showAsAction="never" />
</menu>